--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "vlucas/phpdotenv": "^5.6",
         "php-di/php-di": "^7.1",
         "symfony/console": "^7.3",
-        "shinobiphp/core": "dev-main"
+        "shinobiphp/core": "*"
     },
     "config": {
         "bin-dir": "bin/"
